--- a/css/ui.css
+++ b/css/ui.css
@@ -65,7 +65,7 @@
 
 
 
-/* ******** UI-POPUP ******** */
+/* ******** UI-GALLERY ******** */
 
 .ui-gallery													{position:relative; width:100%; white-space:nowrap; font-size:0; visibility:hidden; user-select:none; overflow-x:hidden}
 .ui-gallery.focus											{visibility:visible}
@@ -81,3 +81,25 @@
 .ui-gallery nav a											{display:inline-block; vertical-align:middle; width:10px; height:10px; border-radius:100%; border:1px solid #4c8cfc; opacity:1; cursor:pointer}
 .ui-gallery nav a.focus										{background-color:#4c8cfc}
 .ui-gallery nav a + a										{margin-left:10px}
+
+
+
+/* ******** UI-COMPARE ******** */
+
+.ui-compare													{position:relative; width:100%; height:240px; background-color:#f0f0f0; user-select:none; overflow:hidden}
+.ui-compare ul li											{position:absolute; left:0; top:0; width:100%; height:100%}
+.ui-compare ul li div										{position:absolute; left:0; top:0; width:100%; height:100%; overflow:hidden}
+.ui-compare ul li img										{position:absolute; left:0; top:0; width:100%; height:100%; object-fit:cover}
+
+.ui-compare ul li:last-child								{left:50%; width:50%; border-left:2px solid white}
+.ui-compare ul li:last-child img							{left:auto; right:0; width:200%}
+.ui-compare ul li span										{position:absolute; left:0; top:50%; margin-left:-16px; margin-top:-15px; width:30px; height:30px; background-color:white; border-radius:100%; z-index:2}
+.ui-compare ul li span:before								{content:""; position:absolute; left:50%; top:50%; margin-left:2px; margin-top:-6px; width:0; height:0; border-top:6px solid transparent; border-bottom:6px solid transparent; border-left:8px solid #4c8cfc}
+.ui-compare ul li span:after								{content:""; position:absolute; left:50%; top:50%; margin-left:-10px; margin-top:-6px; width:0; height:0; border-top:6px solid transparent; border-bottom:6px solid transparent; border-right:8px solid #4c8cfc}
+
+
+
+
+/* ******** UI-CHART ******** */
+
+.ui-chart canvas											{width:100%; height:100%}
